--- a/templates/create_new_course.html
+++ b/templates/create_new_course.html
@@ -79,7 +79,12 @@
             <label for="displayImage">Display Image:</label>
             <input type="file" name="course_display_image" accept="image/*">
         </div>
-
+        <div><label for="level">Level:</label>
+            <select id="level" name="level">
+                <option value="Beginner">Beginner</option>
+                <option value="Intermediate">Intermediate</option>
+                <option value="Expert">Expert</option>          
+            </select><br></div>
         <input type="text" name="course_short_name" id="course_short_name" placeholder="Short Name">
         <input type="text" name="course_code" id="course_code" placeholder="Course Code">
         <input type="text" name="course_objective_title" id="course_objective_title" placeholder="Objective Title">
