--- a/templates/learner_base.html
+++ b/templates/learner_base.html
@@ -25,8 +25,8 @@
             <ul class="navbar-nav mr-auto">
                 <!-- Other navbar items -->
             </ul>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search courses" aria-label="Search">
+            <form class="form-inline" method="get" action="/search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search courses" aria-label="Search" name="query">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
